--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "npm": "6.14.11"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Patrick Malama Shangala",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.9",
+    "nodemon": "^2.0.13",
+    "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
